# mincemeat

./: CMakeLists.txt  CMakePresets.json
examples/: example1.cpp
src/zh/: hash.hpp
src/zh/hash/: sha256.hpp  utility.hpp
tests/: main.cpp
